--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.10.1",
     "@types/js-cookie": "^3.0.6",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "next": "15.3.4",
